--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Додаток з інтерактивним дизайном (Copy)</title>
+       <!-- Manifest -->
+      <link rel="manifest" href="/Rezervplus/manifest.json">  
     </head>
 
     <body>
